Fixed retry button spacing and student single answer display

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -117,7 +117,6 @@
           }
           .retry-question-cell {
             text-align: center;
-            padding-left: 15px;
           }
          }
         tr:last-child {
